--- a/manifest.json
+++ b/manifest.json
@@ -10,16 +10,16 @@
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "/images/get_started16.png",
-      "32": "/images/get_started32.png",
-      "48": "/images/get_started48.png",
-      "128": "/images/get_started128.png"
+      "16": "/images/lcpp16.png",
+      "32": "/images/lcpp32.png",
+      "48": "/images/lcpp48.png",
+      "128": "/images/lcpp128.png"
     }
   },
   "icons": {
-    "16": "/images/get_started16.png",
-    "32": "/images/get_started32.png",
-    "48": "/images/get_started48.png",
-    "128": "/images/get_started128.png"
+    "16": "/images/lcpp16.png",
+    "32": "/images/lcpp32.png",
+    "48": "/images/lcpp48.png",
+    "128": "/images/lcpp128.png"
   }
 }
